# server/docs/swagger.json
@@ -1129,6 +1129,13 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "user jwt",
+                        "name": "x-token",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1407,6 +1414,40 @@
                         "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/task/image/{id}": {
+            "get": {
+                "description": "get task image",
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Get task image",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/task/locate/{id}": {
+            "get": {
+                "description": "get task image of location",
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Get task image of location",
                 "responses": {
                     "200": {
                         "description": "OK",
