# server/routes/task.go
@@ -2,9 +2,10 @@ package routes
 
 import (
 	"MyTodo/engine/v1/starter"
-	"MyTodo/middleware/handler"
-	"MyTodo/service/task/v1"
-	"path/filepath"
+	middleware "MyTodo/middleware/handler"
+	service "MyTodo/service/task/v1"
+
+	"github.com/prometheus/client_golang/prometheus"
 )
 
 type TaskRoute struct{}
@@ -12,22 +13,64 @@ type TaskRoute struct{}
 func (r *TaskRoute) InstallTaskRoute(g *starter.MyTodoServerGroup) {
 	taskRouter := g.Group("/task")
 	{
-		taskRouter.POST("/add", middleware.AuthJWT, starter.BindRequest(service.CreateTask))
-		taskRouter.GET("/get", middleware.AuthJWT, starter.BindRequest(service.GetTask))
-		taskRouter.GET("/info", middleware.AuthJWT, starter.BindRequest(service.InfoTask))
-		taskRouter.POST("/commit", middleware.AuthJWT, starter.BindRequest(service.CommitTask))
-		taskRouter.GET("/locate/:id", func(c starter.TodoContext) {
-			id := c.Context().Param("id")
-			if len(id) > 0 {
-				c.Context().File(filepath.Join("./assets/task", id+".png"))
-			}
-		})
-		taskRouter.GET("/image/:id", func(c starter.TodoContext) {
-			id := c.Context().Param("id")
-			if len(id) > 0 {
-				c.Context().File(filepath.Join("./assets/task/file", id+".png"))
-			}
-		})
-		taskRouter.POST("/perm_check", starter.BindRequest(service.TaskHasPerm))
+		taskRouter.POST("/add",
+			middleware.PromCount(prometheus.CounterOpts{
+				Namespace: "task",
+				Name:      "add",
+				Help:      "counts view count",
+			}),
+			middleware.AuthJWT,
+			starter.BindRequest(service.CreateTask))
+
+		taskRouter.GET("/get",
+			middleware.PromCount(prometheus.CounterOpts{
+				Namespace: "task",
+				Name:      "get",
+				Help:      "counts view count",
+			}),
+			middleware.AuthJWT,
+			starter.BindRequest(service.GetTask))
+
+		taskRouter.GET("/info",
+			middleware.PromCount(prometheus.CounterOpts{
+				Namespace: "task",
+				Name:      "info",
+				Help:      "counts view count",
+			}),
+			middleware.AuthJWT,
+			starter.BindRequest(service.InfoTask))
+
+		taskRouter.POST("/commit",
+			middleware.PromCount(prometheus.CounterOpts{
+				Namespace: "task",
+				Name:      "add",
+				Help:      "counts view count",
+			}),
+			middleware.AuthJWT,
+			starter.BindRequest(service.CommitTask))
+
+		taskRouter.GET("/locate/:id",
+			middleware.PromCount(prometheus.CounterOpts{
+				Namespace: "task",
+				Name:      "locate",
+				Help:      "counts view count",
+			}),
+			service.TaskLocateImage)
+
+		taskRouter.GET("/image/:id",
+			middleware.PromCount(prometheus.CounterOpts{
+				Namespace: "task",
+				Name:      "image",
+				Help:      "counts view count",
+			}),
+			service.TaskImage)
+
+		taskRouter.POST("/perm_check",
+			middleware.PromCount(prometheus.CounterOpts{
+				Namespace: "task",
+				Name:      "perm_check",
+				Help:      "counts view count",
+			}),
+			starter.BindRequest(service.TaskHasPerm))
 	}
 }
